feat: add user create model for api fix: fix documentations again
